// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactInfo renders ContactInfo component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h5
          class="my-4"
        >
          Contact Info
        </h5>
        <label
          class="text-black-50 mb-1 form-label"
          for="mobileno"
        >
          Mobile Number
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="mobileno"
            id="mobileno"
            readonly=""
            type="tel"
            value="97399245"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="email"
        >
          Email Address
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="email"
            id="email"
            readonly=""
            type="email"
            value="myinfotesting@gmail.com"
          />
        </div>
        <h5
          class="my-4"
        >
          Registered Address
        </h5>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_block"
        >
          Block Number
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="regadd_block"
            id="regadd_block"
            readonly=""
            type="text"
            value="102"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_street"
        >
          Street Name
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="regadd_street"
            id="regadd_street"
            readonly=""
            type="text"
            value="BEDOK NORTH AVENUE 4"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_building"
        >
          Building Name
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="regadd_building"
            id="regadd_building"
            readonly=""
            type="text"
            value="PEARL GARDEN"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_unit"
        >
          Floor & Unit No
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control"
            data-testid="regadd_unit"
            id="regadd_unit"
            type="text"
            value=""
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_postal"
        >
          Postal Code
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control"
            data-testid="regadd_postal"
            id="regadd_postal"
            type="text"
            value=""
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="regadd_type"
        >
          Type of Housing
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control"
            data-testid="regadd_type"
            id="regadd_type"
            type="text"
            value=""
          />
        </div>
        <div>
          <button
            class="button text-uppercase btn btn-primary"
            type="button"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h5
        class="my-4"
      >
        Contact Info
      </h5>
      <label
        class="text-black-50 mb-1 form-label"
        for="mobileno"
      >
        Mobile Number
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="mobileno"
          id="mobileno"
          readonly=""
          type="tel"
          value="97399245"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="email"
      >
        Email Address
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="email"
          id="email"
          readonly=""
          type="email"
          value="myinfotesting@gmail.com"
        />
      </div>
      <h5
        class="my-4"
      >
        Registered Address
      </h5>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_block"
      >
        Block Number
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="regadd_block"
          id="regadd_block"
          readonly=""
          type="text"
          value="102"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_street"
      >
        Street Name
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="regadd_street"
          id="regadd_street"
          readonly=""
          type="text"
          value="BEDOK NORTH AVENUE 4"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_building"
      >
        Building Name
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="regadd_building"
          id="regadd_building"
          readonly=""
          type="text"
          value="PEARL GARDEN"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_unit"
      >
        Floor & Unit No
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control"
          data-testid="regadd_unit"
          id="regadd_unit"
          type="text"
          value=""
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_postal"
      >
        Postal Code
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control"
          data-testid="regadd_postal"
          id="regadd_postal"
          type="text"
          value=""
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="regadd_type"
      >
        Type of Housing
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control"
          data-testid="regadd_type"
          id="regadd_type"
          type="text"
          value=""
        />
      </div>
      <div>
        <button
          class="button text-uppercase btn btn-primary"
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IncomeInfo renders IncomeInfo component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h5
          class="my-4"
        >
          Notice of Assessment (History)
        </h5>
        <div
          data-testid="noas"
        >
          <div
            class="mb-3 row"
          >
            <div
              class="text-start fw-bolder col-md-6"
            >
              Year of Assessment
            </div>
            <div
              class="text-end col-md-3"
            >
              2021
            </div>
            <div
              class="text-end col-md-3"
            >
              2020
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start col-md-6"
            >
              Employment
            </div>
            <div
              class="text-end col-md-3"
            >
              64400
            </div>
            <div
              class="text-end col-md-3"
            >
              36112.8
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start col-md-6"
            >
              Trade
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start col-md-6"
            >
              Interest
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start col-md-6"
            >
              Rent
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
            <div
              class="text-end col-md-3"
            >
              0
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start fw-bolder col-md-6"
            >
              Total income
            </div>
            <div
              class="text-end col-md-3"
            >
              64400
            </div>
            <div
              class="text-end col-md-3"
            >
              53700
            </div>
          </div>
          <div
            class="mb-3 row"
          >
            <div
              class="text-start fw-bolder col-md-6"
            >
              Tax Clearance
            </div>
            <div
              class="text-end col-md-3"
            >
              N
            </div>
            <div
              class="text-end col-md-3"
            >
              N
            </div>
          </div>
        </div>
        <h5
          class="my-4"
        >
          Other income Information
        </h5>
        <label
          class="text-black-50 mb-1 form-label"
          for="ownerprivate"
        >
          Ownership of Private Residential Property
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="ownerprivate"
            id="ownerprivate"
            readonly=""
            type="text"
            value="No"
          />
        </div>
        <h5
          class="my-4"
        >
          CPF Account Balance
        </h5>
        <div
          class="mb-3 input-group"
        >
          <span
            class="input-group-text"
            id="basic-addon1"
          >
            Ordinary Account (OA)(S$)
          </span>
          <input
            aria-describedby="basic-addon1"
            class="text-end form-control"
            data-testid="cpfbalances_oa"
            readonly=""
            type="text"
            value="58839.75"
          />
        </div>
        <div
          class="mb-3 input-group"
        >
          <span
            class="input-group-text"
            id="basic-addon2"
          >
            Special Account (SA)(S$)
          </span>
          <input
            aria-describedby="basic-addon2"
            class="text-end form-control"
            data-testid="cpfbalances_sa"
            readonly=""
            type="text"
            value="15349.5"
          />
        </div>
        <div
          class="mb-3 input-group"
        >
          <span
            class="input-group-text"
            id="basic-addon3"
          >
            Medisave Account (MA)(S$)
          </span>
          <input
            aria-describedby="basic-addon3"
            class="text-end form-control"
            data-testid="cpfbalances_ma"
            readonly=""
            type="text"
            value="20466"
          />
        </div>
        <h5
          class="my-4"
        >
          CPF Contributions History
        </h5>
        <table
          class="cpf_talbe table table-striped table-borderless table-hover"
          data-testid="cpfcontributions"
        >
          <thead>
            <tr>
              <th>
                For Month
              </th>
              <th>
                Paid On
              </th>
              <th
                class="text-end"
              >
                Amount (S$)
              </th>
              <th>
                Employer
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Aug 2021
              </td>
              <td>
                25 Aug 2021
              </td>
              <td
                class="text-end"
              >
                1425
              </td>
              <td>
                CRYSTAL HORSE INVEST PTE LTD
              </td>
            </tr>
            <tr>
              <td>
                Sep 2021
              </td>
              <td>
                25 Sep 2021
              </td>
              <td
                class="text-end"
              >
                1425
              </td>
              <td>
                CRYSTAL HORSE INVEST PTE LTD
              </td>
            </tr>
          </tbody>
        </table>
        <div>
          <button
            class="button text-uppercase btn btn-primary"
            type="button"
          >
            Submit
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h5
        class="my-4"
      >
        Notice of Assessment (History)
      </h5>
      <div
        data-testid="noas"
      >
        <div
          class="mb-3 row"
        >
          <div
            class="text-start fw-bolder col-md-6"
          >
            Year of Assessment
          </div>
          <div
            class="text-end col-md-3"
          >
            2021
          </div>
          <div
            class="text-end col-md-3"
          >
            2020
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start col-md-6"
          >
            Employment
          </div>
          <div
            class="text-end col-md-3"
          >
            64400
          </div>
          <div
            class="text-end col-md-3"
          >
            36112.8
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start col-md-6"
          >
            Trade
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start col-md-6"
          >
            Interest
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start col-md-6"
          >
            Rent
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
          <div
            class="text-end col-md-3"
          >
            0
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start fw-bolder col-md-6"
          >
            Total income
          </div>
          <div
            class="text-end col-md-3"
          >
            64400
          </div>
          <div
            class="text-end col-md-3"
          >
            53700
          </div>
        </div>
        <div
          class="mb-3 row"
        >
          <div
            class="text-start fw-bolder col-md-6"
          >
            Tax Clearance
          </div>
          <div
            class="text-end col-md-3"
          >
            N
          </div>
          <div
            class="text-end col-md-3"
          >
            N
          </div>
        </div>
      </div>
      <h5
        class="my-4"
      >
        Other income Information
      </h5>
      <label
        class="text-black-50 mb-1 form-label"
        for="ownerprivate"
      >
        Ownership of Private Residential Property
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="ownerprivate"
          id="ownerprivate"
          readonly=""
          type="text"
          value="No"
        />
      </div>
      <h5
        class="my-4"
      >
        CPF Account Balance
      </h5>
      <div
        class="mb-3 input-group"
      >
        <span
          class="input-group-text"
          id="basic-addon1"
        >
          Ordinary Account (OA)(S$)
        </span>
        <input
          aria-describedby="basic-addon1"
          class="text-end form-control"
          data-testid="cpfbalances_oa"
          readonly=""
          type="text"
          value="58839.75"
        />
      </div>
      <div
        class="mb-3 input-group"
      >
        <span
          class="input-group-text"
          id="basic-addon2"
        >
          Special Account (SA)(S$)
        </span>
        <input
          aria-describedby="basic-addon2"
          class="text-end form-control"
          data-testid="cpfbalances_sa"
          readonly=""
          type="text"
          value="15349.5"
        />
      </div>
      <div
        class="mb-3 input-group"
      >
        <span
          class="input-group-text"
          id="basic-addon3"
        >
          Medisave Account (MA)(S$)
        </span>
        <input
          aria-describedby="basic-addon3"
          class="text-end form-control"
          data-testid="cpfbalances_ma"
          readonly=""
          type="text"
          value="20466"
        />
      </div>
      <h5
        class="my-4"
      >
        CPF Contributions History
      </h5>
      <table
        class="cpf_talbe table table-striped table-borderless table-hover"
        data-testid="cpfcontributions"
      >
        <thead>
          <tr>
            <th>
              For Month
            </th>
            <th>
              Paid On
            </th>
            <th
              class="text-end"
            >
              Amount (S$)
            </th>
            <th>
              Employer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Aug 2021
            </td>
            <td>
              25 Aug 2021
            </td>
            <td
              class="text-end"
            >
              1425
            </td>
            <td>
              CRYSTAL HORSE INVEST PTE LTD
            </td>
          </tr>
          <tr>
            <td>
              Sep 2021
            </td>
            <td>
              25 Sep 2021
            </td>
            <td
              class="text-end"
            >
              1425
            </td>
            <td>
              CRYSTAL HORSE INVEST PTE LTD
            </td>
          </tr>
        </tbody>
      </table>
      <div>
        <button
          class="button text-uppercase btn btn-primary"
          type="button"
        >
          Submit
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PersonalInfo renders PersonalInfo component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h5
          class="my-4"
        >
          Personal Info
        </h5>
        <label
          class="text-black-50 mb-1 form-label"
          for="uinfin"
        >
          NRIC/FIN
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="uinfin"
            id="uinfin"
            readonly=""
            type="text"
            value="S9812381D"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="name"
        >
          Principal Name
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="name"
            id="name"
            readonly=""
            type="text"
            value="TAN XIAO HUI"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="sex"
        >
          Sex
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="sex"
            id="sex"
            readonly=""
            type="text"
            value="FEMALE"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="dob"
        >
          Date of Birth
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="dob"
            id="dob"
            readonly=""
            type="text"
            value="1998-06-06"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="birthcountry"
        >
          Country of Birth
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="birthcountry"
            id="birthcountry"
            readonly=""
            type="text"
            value="SINGAPORE"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="residentialstatus"
        >
          Residential Status
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="residentialstatus"
            id="residentialstatus"
            readonly=""
            type="text"
            value="CITIZEN"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="nationality"
        >
          Nationality
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="nationality"
            id="nationality"
            readonly=""
            type="text"
            value="SINGAPORE CITIZEN"
          />
        </div>
        <label
          class="text-black-50 mb-1 form-label"
          for="race"
        >
          Race
        </label>
        <div
          class="mb-3 input-group"
        >
          <input
            class="form-control-plaintext"
            data-testid="race"
            id="race"
            readonly=""
            type="text"
            value="CHINESE"
          />
        </div>
        <div>
          <button
            class="button text-uppercase btn btn-primary"
            type="button"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h5
        class="my-4"
      >
        Personal Info
      </h5>
      <label
        class="text-black-50 mb-1 form-label"
        for="uinfin"
      >
        NRIC/FIN
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="uinfin"
          id="uinfin"
          readonly=""
          type="text"
          value="S9812381D"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="name"
      >
        Principal Name
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="name"
          id="name"
          readonly=""
          type="text"
          value="TAN XIAO HUI"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="sex"
      >
        Sex
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="sex"
          id="sex"
          readonly=""
          type="text"
          value="FEMALE"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="dob"
      >
        Date of Birth
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="dob"
          id="dob"
          readonly=""
          type="text"
          value="1998-06-06"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="birthcountry"
      >
        Country of Birth
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="birthcountry"
          id="birthcountry"
          readonly=""
          type="text"
          value="SINGAPORE"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="residentialstatus"
      >
        Residential Status
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="residentialstatus"
          id="residentialstatus"
          readonly=""
          type="text"
          value="CITIZEN"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="nationality"
      >
        Nationality
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="nationality"
          id="nationality"
          readonly=""
          type="text"
          value="SINGAPORE CITIZEN"
        />
      </div>
      <label
        class="text-black-50 mb-1 form-label"
        for="race"
      >
        Race
      </label>
      <div
        class="mb-3 input-group"
      >
        <input
          class="form-control-plaintext"
          data-testid="race"
          id="race"
          readonly=""
          type="text"
          value="CHINESE"
        />
      </div>
      <div>
        <button
          class="button text-uppercase btn btn-primary"
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
